--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no,
 	 initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Pagina de Startup</title>
+	<title>startup</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600i,700" rel="stylesheet">
@@ -27,8 +27,8 @@
 
 			<div class="row textos">
 				<div class="col-md-12">
-					<h2 class="primera_linea">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
-					<h3 class="segunda_linea">Duis aute irure dolor in reprehenderit</h3>
+					<h2 class="primera_linea">Expertos en diseño Web para Empresas y Particulares</h2>
+					<h3 class="segunda_linea">Designetl empresa creada por Jorge Tejero</h3>
 					<div class="contenedor-btns">
 						<a href="#">Caracteristicas</a>
 						<a href="#">Comprar Ahora</a>
@@ -50,18 +50,18 @@
 				<div class="row">
 					<div class="col-sm-4 caracteristica">
 						<img src="img/icono1.png" alt="" class="icono">
-						<h4 class="primera_linea">Lorem Ipsum</h4>
-						<p class="parrafo">Dolor sit amet, consectetur adipiscing elit. In dignissim odio ut sagittis elementum.</p>
+						<h4 class="primera_linea">Imagen Online</h4>
+						<p class="parrafo">Realizamos un estudio del mercado al cual se dirige para garantizar tu imagen online.</p>
 					</div>
 					<div class="col-sm-4 caracteristica">
 						<img src="img/icono2.png" alt="" class="icono">
-						<h4 class="primera_linea">Aenean rhoncus augue</h4>
-						<p class="parrafo">Curabitur nisi enim, placerat ac convallis id, posuere vehicula ligula.</p>
+						<h4 class="primera_linea">Interacción</h4>
+						<p class="parrafo">Creamos cada centimetro de tu web para garantizar la mejor experiencia a los usuarios.</p>
 					</div>
 					<div class="col-sm-4 caracteristica">
 						<img src="img/icono3.png" alt="" class="icono">
-						<h4 class="primera_linea">Praesent</h4>
-						<p class="parrafo">Nulla diam mi, pharetra eget mattis sed, mollis non ligula.</p>
+						<h4 class="primera_linea">Posicionamiento</h4>
+						<p class="parrafo">Nuestros expertos realizan una busqueda para mejorar siempre tu visibilidad en los buscadores.</p>
 					</div>
 				</div>
 			</div>
@@ -76,17 +76,17 @@
 								<img src="img/thumb1.jpg" alt="">
 							</div>
 							<div class="col-xs-8 texto">
-								<h2 class="titulo azul">Vivamus ultricies lacus eu ligula porttitor</h2>
+								<h2 class="titulo azul">Que es lo que necesita una gran pagina web</h2>
 								<p class="parrafo">
-									Aenean rhoncus augue nec finibus malesuada. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec diam odio, dictum non gravida in, suscipit id est.
+									Necesita tener buena visibilidad, buena presencia, grandes estilos que distingas la marca y la hagan ver lo que es, pero lo esencial en una web es que sea adaptable, porque hoy en dia gran parte del consumo digital es via movil.
 								</p>
 							</div>
 						</div>
 
 						<div class="row foto">
 							<div class="col-xs-8 texto">
-								<h2 class="titulo naranja derecha">Aliquam ligula erat, porttitor</h2>
-								<p class="parrafo derecha">Nunc a semper felis. Ut at tellus massa. Nulla sit amet massa blandit, accumsan orci in, gravida massa. Sed mollis, est at porttitor volutpat, est augue molestie mi, ut pretium quam nunc sed dui. Nunc sed purus nunc.</p>
+								<h2 class="titulo naranja derecha">Quienes deberian tener una pagina Web</h2>
+								<p class="parrafo derecha">Hoy en dia casi toda persona que tenga una gran idea o quiera desarrollar un negocio deberia tener una pagina web gustosa y optimizada, debido a que con los avances digitales del siglo 21 el negocio o servicio que no tenga visibilidad en internet no existe para la gran mayoria de consumidores.</p>
 							</div>
 							<div class="col-xs-4 thumb">
 								<img src="img/thumb2.jpg" alt="">
@@ -133,11 +133,11 @@
 				<div class="row">
 					<div class="precio col-sm-4">
 						<div class="plan verde">
-							<p class="nombre">Básico</p>
-							<p class="precio">$9</p>
+							<p class="nombre"> Web Basic</p>
+							<p class="precio">$179</p>
 							<ul class="caracteristicas">
-								<li>1  Cuenta </li>
-								<li>10 GB de espacio</li>
+								<li>1  Web</li>
+								<li>5 Paginas Diseñadas</li>
 								<li>Dominio Personal</li>
 							</ul>
 							<a href="#" class="btn">Contratar Ahora</a>
@@ -146,12 +146,12 @@
 
 					<div class="precio col-sm-4">
 						<div class="plan active">
-							<p class="nombre">Standard</p>
-							<p class="precio">$19</p>
+							<p class="nombre">Web Standard</p>
+							<p class="precio">$299</p>
 							<ul class="caracteristicas">
-								<li>5  Cuenta </li>
-								<li>50 GB de espacio</li>
-								<li>Dominio Personal</li>
+								<li>2  Cuenta </li>
+								<li>15 Paginas Diseñadas</li>
+								<li>Dominio Profesional</li>
 							</ul>
 							<a href="#" class="btn">Contratar Ahora</a>
 						</div>
@@ -159,11 +159,11 @@
 
 					<div class="precio col-sm-4">
 						<div class="plan naranja">
-							<p class="nombre">Premium</p>
-							<p class="precio">$99</p>
+							<p class="nombre">Web Premium</p>
+							<p class="precio">$599</p>
 							<ul class="caracteristicas">
-								<li>Cuentas Ilimitadas</li>
-								<li>500 GB de espacio</li>
+								<li>Web Ilimitadas</li>
+								<li>50 Paginas Diseñadas</li>
 								<li>Dominios Ilimitados</li>
 							</ul>
 							<a href="#" class="btn">Contratar Ahora</a>
@@ -211,7 +211,7 @@
 				<div class="row">
 					<div class="col-md-8">
 						<h4 class="titulo">Contacto</h4>
-						<p class="calle">364 Delaware Avenue <br />Massapequa Park, NY 11762</p>
+						<p class="calle">De la rioja 19 <br />Madrid, 28915</p>
 						<p class="correo">correo [arroba] startup.com</p>
 					</div>
 				</div>
