--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				</div>
 				<div class="menu col-xs-12 col-md-6">
 					<a href="#">Inicio</a>
-					<a href="#">Precio</a>
-					<a href="#">Contacto</a>
+					<a href="#precios">Precio</a>
+					<a href="#contacto">Contacto</a>
 				</div>
 			</div>
 
@@ -30,8 +30,8 @@
 					<h2 class="primera_linea">Expertos en diseño Web para Empresas y Particulares</h2>
 					<h3 class="segunda_linea">Designetl empresa creada por Jorge Tejero</h3>
 					<div class="contenedor-btns">
-						<a href="#">Caracteristicas</a>
-						<a href="#">Comprar Ahora</a>
+						<a href="#caracterist">Caracteristicas</a>
+						<a href="#precios">Comprar Ahora</a>
 					</div>
 				</div>
 			</div>
@@ -43,7 +43,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="titulo">Caracteristicas</h3>
+						<h3 class="titulo" id="caracterist">Caracteristicas</h3>
 					</div>
 				</div>
 
@@ -126,7 +126,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="titulo">Precios</h3>
+						<h3 class="titulo" id="precios">Precios</h3>
 					</div>
 				</div>
 
@@ -210,7 +210,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8">
-						<h4 class="titulo">Contacto</h4>
+						<h4 class="titulo" id="contacto">Contacto</h4>
 						<p class="calle">De la rioja 19 <br />Madrid, 28915</p>
 						<p class="correo">correo [arroba] startup.com</p>
 					</div>
